@@ -4,7 +4,9 @@
 
 .. module:: user
    :synopsis: A standard way to reference user-specific modules.
+   :deprecated:
 
+.. deprecated:: The user module has been removed in Python 3.0.
 
 .. index::
    pair: .pythonrc.py; file
