@@ -20,6 +20,8 @@ Extension Modules
 Library
 -------
 
+- The user module has been deprecated for removal in Python 3.0.
+
 - The stringold module has been deprecated for removal in Python 3.0.
 
 - The mutex module has been deprecated for removal in Python 3.0.
